--- a/_sass/_header.sass
+++ b/_sass/_header.sass
@@ -8,7 +8,7 @@
 	background-attachment: fixed
 	background-repeat: no-repeat
 	text-align: center
-	padding-top: $nav-height + 2.5rem
+	padding-top: 5rem
 
 .site-logo
 	width: 90%
@@ -16,10 +16,15 @@
 	@include filter(drop-shadow($header-shadow))
 
 .site-title
-	color: $brand
-	text-align: center
-	font-weight: 400
-	padding-bottom: 2rem
+	color: $header-font-color
+	text-shadow: $header-shadow
+	text-transform: uppercase
+	font-size: 5rem
+	font-weight: bold
+	padding-bottom: 4rem
+	padding-top: 12rem
+	padding-left: 10rem
+	padding-right: 10rem
 	margin-bottom: 0
 
 
