--- a/_sass/_header.sass
+++ b/_sass/_header.sass
@@ -43,7 +43,8 @@
 		max-width: 20rem
 		margin-top: 4rem
 	.site-title
-		font-size: 5rem
+		font-size: 4rem
+		padding-top: 8rem
 
 @media (max-width: 600px)
 	#hero
@@ -60,3 +61,8 @@
 		// height: 25rem
 	.cta
 		padding: 0.5rem
+	.site-title
+		font-size: 3.5rem
+		padding-top: 5rem
+		padding-left: 2rem
+		padding-right: 2rem
