--- a/_sass/_header.sass
+++ b/_sass/_header.sass
@@ -16,15 +16,10 @@
 	@include filter(drop-shadow($header-shadow))
 
 .site-title
-	color: $header-font-color
-	text-shadow: $header-shadow
-	text-transform: uppercase
-	font-size: 5rem
-	font-weight: bold
-	padding-bottom: 4rem
-	padding-top: 12rem
-	padding-left: 10rem
-	padding-right: 10rem
+	color: $brand
+	text-align: center
+	font-weight: 400
+	padding-bottom: 2rem
 	margin-bottom: 0
 
 
