--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
 			</div>
 			<div class="row">
 				<div class="col-lg-7 col-md-7 col-lg-offset-1">
-					<h3 class="site-title">Our Mission on this site is to educate Real Estate Agents on how to sell more homes.</h3>
+					<h3 class="site-title">Our mission on this site is to help real estate agents elevate their skills, knowledge, and expertise to bring more value to their clients, earn more commissions, and sell more homes.</h3>
 					{{ content }}
 				</div>
 
