--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,6 @@
 <header id="hero">
 <div class="hero-img" style="background-image: url({{site.data.settings.images.hero_image_path}}); background-color: {{site.data.settings.images.hero_background_hex}}">
   <a href="/"><h1 class="site-title">{{site.data.settings.images.hero_text | replace: '-- MARKET --', site.data.settings.client.market}}</h1></a>
+  <h3 class="site-title">Our mission on this site is to help real estate agents elevate their skills, knowledge, and expertise to bring more value to their clients, earn more commissions, and sell more homes.</h3>
   </div>
 </header>
