--- a/_sass/_header.sass
+++ b/_sass/_header.sass
@@ -16,11 +16,14 @@
 	@include filter(drop-shadow($header-shadow))
 
 .site-title
-	color: $brand
+	color: #fff
 	text-align: center
 	font-weight: 400
 	padding-bottom: 2rem
-	margin-bottom: 0
+	padding-top: 5rem
+	width: 75%
+	margin-left: 13%
+	@include filter(drop-shadow($header-shadow))
 
 
 @media (max-width: 1100px)
