--- a/_sass/_header.sass
+++ b/_sass/_header.sass
@@ -28,7 +28,7 @@
 
 @media (max-width: 1100px)
 	.site-title
-		font-size: 5rem
+		font-size: 4rem
 
 @media (max-width: 1000px)
 	.site-logo
@@ -51,7 +51,8 @@
 		max-width: 15rem
 		margin-top: 2rem
 	.site-title
-		font-size: 3.5rem
+		font-size: 2.5rem
+		padding-top: 0
 	.cta
 		padding: 1rem
 @media (max-width: 400px)
@@ -60,7 +61,6 @@
 	.cta
 		padding: 0.5rem
 	.site-title
-		font-size: 3.5rem
-		padding-top: 5rem
+		font-size: 2.5rem
 		padding-left: 2rem
 		padding-right: 2rem
