Updated '_includes/cta-sidebar.html' via CloudCannon

--- a/_includes/cta-sidebar.html
+++ b/_includes/cta-sidebar.html
@@ -10,7 +10,7 @@
 
 <div class="photo-cta">
   <img src="/img/cta-images/workshop.png"  class="photo-cta-container"/>
-  <div class="cta-button"><a href="http://thrivethroughtheshift.com/" target="_blank">Reserve Your Seat   <i class="fa fa-angle-double-right"></i></a></div>
+  <div class="cta-button"><a href="https://docs.google.com/forms/d/e/1FAIpQLSdupJkt2cjDwMzfiFaH0Sl7SdLa_cPfnolaCEiGE5O6_84HSA/viewform" target="_blank">Reserve Your Seat   <i class="fa fa-angle-double-right"></i></a></div>
 </div>
 
 <div class="photo-cta">
