--- a/_sass/_posts.sass
+++ b/_sass/_posts.sass
@@ -44,7 +44,11 @@
 	margin: 0 auto
 	width: 75%
 
-
+@media(max-width: 767px)
+	.quarter-image
+		width: 50%
+	.half-image
+		width: 75%		
 
 .post-image-container
 	padding: 0
